# aspect-ratio-generator

./: AspectRatioGenerator.cpp  CMakeLists.txt  LandmarkPredictor.cpp  README.md
